<resources>
    <string name="app_name">Rewind</string>
    <string name="action_settings">Settings</string>
    <string name="list">List</string>
    <string name="title_activity_record">Record</string>
    <string name="new_recording">Start Listening</string>
    <string name="name">Name</string>
    <string name="defaut_name">Use default name</string>
    <string name="buffer_size">Buffer time</string>
    <string name="listening">Listening…</string>
    <string name="notif_recording_text">Currently listening to the last %s. Tap for more information.</string>
    <string name="save">Save</string>
    <string name="open_inapp">Open app</string>
    <string name="start_listening">Start listening</string>
    <string name="notif_ready">Ready to start listening.</string>
    <string name="time_1_minute">1 min</string>
    <string name="time_5_minutes">5 mins</string>
    <string name="time_10_minutes">10 mins</string>
    <string name="time_30_minutes">30 mins</string>
    <string name="time_60_minutes">1 hr</string>
    <string name="time_180_minutes">3 hrs</string>

    <string name="search">Search</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="none">Nothing here :(</string>
    <string name="close">Close</string>
    <string name="recording_msg">Rewind will keep listening in the background.</string>
    <string name="settings">Settings</string>
    <string name="delete_confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_failed">Failed to delete the audio file</string>
    <string name="share_sound">Share recording…</string>
    <string name="title_activity_preference">Settings</string>
    <string name="setting_always_on">Always on notification</string>
    <string name="setting_always_on_summary">Start recording from a notification</string>
    <string name="started_listening">Started Listening</string>
    <string name="stopped_listening">Saving Recording.</string>
    <string name="saving_recording">Saving Recording…</string>
    <string name="setting_default_length">Default buffer duration</string>
    <string name="setting_default_length_summary">How long does the recorder retain recording for</string>
    <string name="recorded_on">Recorded on %s</string>
    <string name="feature_recommendations">Suggestions</string>
    <string name="app_share">Share App</string>
    <string name="rate_app">How would you rate Rewind?</string>
    <string name="rate_app_title">App feedback</string>
    <string name="setting_autostart_recording">Automatically start recording on boot</string>
    <string name="setting_autostart_recording_summary">Start recording when phone starts up</string>
    <string name="appwidget_start">Start</string>
    <string name="appwidget_stop">Stop</string>
    <string name="add_widget">Add widget</string>
    <string name="setting_stealth_notifications">Stealth Notifications</string>
    <string name="setting_stealth_notifications_summary">Set the recording notifications to low priority</string>
    <string name="mem_error">Error: Unable to reserve memory. Try again later.</string>
    <string name="mic_error">Error: Unable to acquire microphone. Try again later.</string>
    <string name="io_error">Read/Write Error</string>
    <string name="unknown_error">Error occurred while saving</string>
    <string name="notifications">Notifications</string>
    <string name="recording">Recording</string>
    <string name="setting_path_summary">Change file path of saved recordings</string>
    <string name="setting_path">Storage folder</string>
    <string name="setting_path_help">Enter absolute path of the folder in which you want to save the recordings. Leave blank for default (%s)</string>
    <string name="setting_shake_recording_summary">Start recording by shaking the phone or tablet</string>
    <string name="setting_shake_recording">Shake activation</string>
    <string name="app_rate">Rate the app!</string>
    <string name="setting_phone_recording">Phone recorder support</string>
    <string name="setting_phone_recording_summary">Stop recording when in a phone call</string>

    <string name="title_activity_premium">Unlock Rewind</string>
    <string name="premium_title">Unlock Rewind</string>
    <string name="premium_description">Unlock longer buffer times, and other features to come.</string>
    <string name="unlock_now">Unlock now</string>
    <string name="thank_you_premium">Thanks for unlocking Rewind!</string>
    <string name="no_iap_service">Unable to load Rewind unlock information. Do you have the Play Store installed?</string>
    <string name="upgrade">Upgrade...</string>
    <string name="compress_files_summary">Save as smaller .mp3 files instead of .wav.</string>
    <string name="compress_files">Compress Audio</string>
    <string name="action_cancel_title">Cancel</string>
    <string name="action_save_title">Save Recording</string>
    <string name="action_start_title">Start Recording</string>
    <string name="are_you_sure">Are you sure?</string>

</resources>
