<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications">
        <SwitchPreference
            android:defaultValue="false"
            android:key="use_mp3"
            android:summary="@string/compress_files_summary"
            android:title="@string/compress_files" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="always_on_notification"
            android:summary="@string/setting_always_on_summary"
            android:title="@string/setting_always_on" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="stealth_notifications"
            android:summary="@string/setting_stealth_notifications_summary"
            android:title="@string/setting_stealth_notifications" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/recording">
        <SwitchPreference
            android:defaultValue="false"
            android:key="autostart_recording"
            android:summary="@string/setting_autostart_recording_summary"
            android:title="@string/setting_autostart_recording" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="should_detect_shake"
            android:summary="@string/setting_shake_recording_summary"
            android:title="@string/setting_shake_recording" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="should_detect_phone"
            android:summary="@string/setting_phone_recording_summary"
            android:title="@string/setting_phone_recording" />

        <ListPreference
            android:defaultValue="300"
            android:entries="@array/length_keys"
            android:entryValues="@array/length_values"
            android:key="default_length"
            android:summary="@string/setting_default_length_summary"
            android:title="@string/setting_default_length" />

        <EditTextPreference
            android:defaultValue=""
            android:entries="@array/length_keys"
            android:entryValues="@array/length_values"
            android:key="path"
            android:summary="@string/setting_path_summary"
            android:dialogMessage="@string/setting_path_help"
            android:title="@string/setting_path" />
    </PreferenceCategory>
</PreferenceScreen>