<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_recording"
            android:id="@+id/title"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="24sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/buffer_size"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/gray"
            />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radio_group_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <RadioButton android:id="@+id/time_1_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_1_minute"
                style="@style/Base.Theme.AppCompat.Light"
                />
            <RadioButton android:id="@+id/time_5_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/time_5_minutes"
                />
            <RadioButton android:id="@+id/time_10_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_10_minutes"
                />
            <RadioButton android:id="@+id/time_30_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_30_minutes"
                />
            <RadioButton android:id="@+id/time_60_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_60_minutes"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/ic_lock_outline_grey_600_18dp"
                android:drawableEnd="@drawable/ic_lock_outline_grey_600_18dp"
            />
            <RadioButton android:id="@+id/time_180_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_180_minutes"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/ic_lock_outline_grey_600_18dp"
                android:drawableEnd="@drawable/ic_lock_outline_grey_600_18dp"
                />
        </RadioGroup>
    </HorizontalScrollView>

</LinearLayout>