<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="10dp" android:background="@color/white"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:clickable="true"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list"
        android:id="@+id/list_item"
        android:drawableLeft="@drawable/ic_view_list_black_18dp"
        android:drawablePadding="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:textColor="#242424"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_recording"
        android:id="@+id/record_item"
        android:drawableLeft="@drawable/ic_mic_black_18dp"
        android:drawablePadding="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:textColor="#242424"
        />
    <View
        android:layout_marginTop="8dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffeaeaea"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/settings_item"
        android:drawableLeft="@drawable/ic_settings_black_18dp"
        android:drawablePadding="10dp"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:textColor="#242424"
        />
</LinearLayout>